UI For Logbook form ready to be pushed

--- a/src/assets/vendor-logbook/main.css
+++ b/src/assets/vendor-logbook/main.css
@@ -196,11 +196,11 @@ h6 {
 }
 
 .wrapper--w960 {
-  max-width: 960px;
+  max-width: 100%
 }
 
 .wrapper--w680 {
-  max-width: 680px;
+  max-width: 100%;
 }
 
 /* ==========================================================================
